# brush

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  UPGRADE_NOTES.md  _typos.toml  contract.json  deny.toml  dist-workspace.toml  manifest.json  manifest_simple.json  package-lock.json  package.json  test.nt
.github/workflows/: ci.yml
apps/: Dockerfile
apps/brush-app/: .gitignore  Cargo.toml
apps/brush-app/app/: build.gradle
apps/brush-app/assets/: manifest.json
apps/brush-app/src/: android.rs  bin.rs  lib.rs  wasm.rs
apps/brush-app/src/ui/: app.rs  burn_texture.rs  camera_controls.rs  datasets.rs  log_panel.rs  mod.rs  panels.rs  scene.rs  settings_panel.rs  settings_popup.rs  splat_backbuffer.rs  stats.rs  training_panel.rs  ui_process.rs  widget_3d.rs
apps/brush-app/src/ui/shaders/: splat_backbuffer.wgsl  widget_3d.wgsl
apps/brush-app/web/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/brush-app/web/src/: App.tsx  BrushViewer.tsx
apps/brush-c/: Cargo.toml
apps/brush-c/src/: lib.rs
apps/brush-c/tests/: integration.rs
apps/brush-c/tests/data/test_dataset/: init.ply  transforms.json
apps/brush-cli/: Cargo.toml
apps/brush-cli/src/: lib.rs
apps/brush-js/: Cargo.toml  README.md
apps/brush-js/src/: lib.rs
apps/brush-js/web/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/brush-js/web/src/: main.ts  point_renderer.ts
crates/brush-app/: Cargo.toml
crates/brush-app/src/: bin.rs
crates/brush-async/: Cargo.toml
crates/brush-async/src/: latest.rs  lib.rs  native.rs  wasm.rs
crates/brush-bench-test/: Cargo.toml  webdriver.json
crates/brush-bench-test/src/: benches.rs  reference.rs  safetensor_utils.rs
crates/brush-bench-test/test_cases/: basic_case.safetensors  generate_reference.py  tiny_case.safetensors
crates/brush-bench-test/tests/: finite_diff.rs  fuzz.rs  integration.rs
crates/brush-cli/src/: lib.rs
crates/brush-cube/: Cargo.toml
crates/brush-cube/src/: host.rs  lib.rs  test_helpers.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: config.rs  lib.rs  load_image.rs  scene.rs  scene_loader.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerfstudio.rs  realitycapture.rs
crates/brush-kernel/: build.rs
crates/brush-loss/: Cargo.toml
crates/brush-loss/src/: lib.rs
crates/brush-loss/tests/: reference.rs
crates/brush-prefix-sum/: Cargo.toml
crates/brush-prefix-sum/src/: kernels.rs  lib.rs
crates/brush-process/: Cargo.toml
crates/brush-process/src/: config.rs  lib.rs  message.rs  slot.rs  train_stream.rs
crates/brush-render/: Cargo.toml
crates/brush-render-bwd/: Cargo.toml
crates/brush-render-bwd/src/: burn_glue.rs  lib.rs  render_bwd.rs
crates/brush-render-bwd/src/kernels/: mod.rs  project_backwards.rs  rasterize_backwards.rs
crates/brush-render/src/: bounding_box.rs  burn_glue.rs  camera.rs  dim_check.rs  gaussian_splats.rs  get_tile_offset.rs  lib.rs  render.rs  render_aux.rs  shaders.rs  validation.rs
crates/brush-render/src/kernels/: helpers.rs  map_gaussians.rs  mod.rs  project_forward.rs  project_visible.rs  rasterize.rs  sh.rs  types.rs
crates/brush-render/src/kernels/camera_model/: kannala_brandt_4.rs  mod.rs  pinhole.rs  radial_tangential_8.rs  thin_prism_fisheye.rs
crates/brush-render/src/shaders/: helpers.wgsl  map_gaussian_to_intersects.wgsl  project_forward.wgsl  project_visible.wgsl  rasterize.wgsl
crates/brush-render/src/tests/: mod.rs
crates/brush-rerun/: Cargo.toml
crates/brush-rerun/src/: burn_to_rerun.rs  lib.rs  visualize_tools.rs
crates/brush-serde/: Cargo.toml
crates/brush-serde/src/: export.rs  import.rs  lib.rs
crates/brush-sort/: Cargo.toml
crates/brush-sort/benches/: sort_bench.rs
crates/brush-sort/src/: kernels.rs  lib.rs
crates/brush-train/: Cargo.toml
crates/brush-train/src/: adam_scaled.rs  config.rs  eval.rs  lib.rs  lod.rs  msg.rs  multinomial.rs  quat_vec.rs  splat_init.rs  stats.rs  train.rs
crates/brush-ui/src/: app.rs  scene.rs  stats.rs  training_panel.rs  ui_process.rs  widget_3d.rs
crates/brush-vfs/: Cargo.toml
crates/brush-vfs/src/: data_source.rs  lib.rs
crates/colmap-reader/: Cargo.toml
crates/colmap-reader/src/: lib.rs
crates/lpips/: Cargo.toml
crates/lpips-convert/: Cargo.toml
crates/lpips-convert/src/: main.rs
crates/rrfd/src/: wasm.rs
crates/underfolder-to-nerf/: Cargo.toml
crates/underfolder-to-nerf/src/: lib.rs
examples/train-2d/: Cargo.toml
examples/train-2d/examples/: train-2d.rs
extras/: Dockerfile
python/: decode_splat.py
