[package]
name = "brush-js"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[lib]
name = "brush_js"
crate-type = ["cdylib", "rlib"]

[dependencies]
brush-process.path = "../../crates/brush-process"
brush-render.path = "../../crates/brush-render"
rrfd.path = "../../crates/rrfd"

burn.workspace = true
wgpu.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
log.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen = "0.6"
web-sys = { workspace = true, features = [
    "FileSystemDirectoryHandle",
] }
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

# wasm_js random backend needs to be enabled explicitly.
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--converge",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]

[package.metadata.cargo-shear]
# `getrandom` is pulled for its `wasm_js` feature, not used directly.
ignored = ["getrandom"]
