[package]
name = "lpips-convert"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "lpips-convert"
path = "src/main.rs"

[dependencies]
lpips = { path = "../lpips" }

# burn-store depends on zstd (C code) which can't compile for WASM.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
burn.workspace = true
# `pytorch` is feature-gated here (not workspace) so the main brush graph
# doesn't grow `zip 8` and its newer-RustCrypto family.
burn-store = { workspace = true, features = ["pytorch"] }
