[package]
name = "lpips"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn.workspace = true
image.workspace = true

[dev-dependencies]
brush-cube = { path = "../brush-cube" }
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# ahash (pulled in transitively) uses getrandom 0.3; enable wasm_js for it too.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear] # or [workspace.metadata.cargo-shear]
ignored = ["getrandom"]
